syntax = "proto3";

package main;

option go_package = "./proto";

// 添加字典类型
message AddDictTypeReq {
  int64 id = 1; //字典id
  string dict_name = 2; //字典名称
  string dict_type = 3; //字典类型
  int32 status = 4; //状态（0：停用，1:正常）
  string remark = 5; //备注
  string create_by = 6; //创建者
}

message AddDictTypeResp {
  string pong = 1;
}

// 删除字典类型
message DeleteDictTypeReq {
  repeated int64 ids = 1;
}

message DeleteDictTypeResp {
  string pong = 1;
}

// 更新字典类型
message UpdateDictTypeReq {
  int64 id = 1; //字典id
  string dict_name = 2; //字典名称
  string dict_type = 3; //字典类型
  int32 status = 4; //状态（0：停用，1:正常）
  string remark = 5; //备注
  string update_by = 8; //更新者
}

message UpdateDictTypeResp {
  string pong = 1;
}

// 更新字典类型状态
message UpdateDictTypeStatusReq {
  repeated int64 ids = 1; //字典id
  int32 status = 2; //状态（0：停用，1:正常）
  string update_by = 3; //更新者
}

message UpdateDictTypeStatusResp {
  string pong = 1;
}

// 查询字典类型详情
message QueryDictTypeDetailReq {
  int64 id = 1;
}

message QueryDictTypeDetailResp {
  int64 id = 1; //字典id
  string dict_name = 2; //字典名称
  string dict_type = 3; //字典类型
  int32 status = 4; //状态（0：停用，1:正常）
  string remark = 5; //备注
  string create_by = 6; //创建者
  string create_time = 7; //创建时间
  string update_by = 8; //更新者
  string update_time = 9; //更新时间

}

// 分页查询字典类型列表
message QueryDictTypeListReq {
  string dict_name = 1; //字典名称
  string dict_type = 2; //字典类型
  int32 status = 3; //状态（0：停用，1:正常）
  int64 page_num = 4; //第几页
  int64 page_size = 5; //每页的数量
}

message DictTypeListData {
  int64 id = 1; //字典id
  string dict_name = 2; //字典名称
  string dict_type = 3; //字典类型
  int32 status = 4; //状态（0：停用，1:正常）
  string remark = 5; //备注
  string create_by = 6; //创建者
  string create_time = 7; //创建时间
  string update_by = 8; //更新者
  string update_time = 9; //更新时间

}

message QueryDictTypeListResp {
  int64 total = 1;
  repeated  DictTypeListData list = 2;
}

// 字典类型
service DictTypeService {
  // 添加字典类型
  rpc AddDictType(AddDictTypeReq) returns (AddDictTypeResp){}
  // 删除字典类型
  rpc DeleteDictType(DeleteDictTypeReq) returns (DeleteDictTypeResp){}
  // 更新字典类型
  rpc UpdateDictType(UpdateDictTypeReq) returns (UpdateDictTypeResp ){}
  // 更新字典类型状态
  rpc UpdateDictTypeStatus(UpdateDictTypeStatusReq) returns (UpdateDictTypeStatusResp ){}
  // 查询字典类型详情
  rpc QueryDictTypeDetail(QueryDictTypeDetailReq) returns (QueryDictTypeDetailResp){}
  // 查询字典类型列表
  rpc QueryDictTypeList(QueryDictTypeListReq) returns (QueryDictTypeListResp){}


}
